update testi, icon, dan gambar

--- a/index.html
+++ b/index.html
@@ -552,9 +552,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjX9eqvpuQLAHcSlvQgmSfykv04ENJje8X0sSjdcCPVHAUZ08OM=w72-h72-p-rp-mo-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjVXpMA2vaCWtKNBmUXG7M8wJM__KbFlbCTADg2eudNNZZGRmqe6=w72-h72-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-1" />
-                      <h3>DivaNorberta Sofianova </h3>
+                      <h3>Nabil Rafif Makarim </h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -564,16 +564,17 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The place is comfortable The room is air-conditioned so it's cool, the classroom for learning is
-                        also comfortable and like a regular classroom.The mentors are very good,
-                        <span class="dots">...</span><span class="readMore"> Read More
+                        kelasnya asik, buat kita tau apa permasalahan yang sering diri sendiri hadapi dalam public
+                        speaking, dan cara mengatasi masalah itu. juga cara cara untuk memperbaiki hal hal apa saja yang
+                        harus dihindari.
+                        <!-- <span class="dots">...</span><span class="readMore"> Read More
                           &raquo;</span>
                         <span class="moreText"> their teaching methods are fun and exciting, but the material that is
                           delivered reaches us well.... actually there are still many things that I want to say. But
                           that's all...anyway good luck 🤗
                         </span><span class="readLess"> &laquo; Read
                           Less</span>
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i> -->
                       </p>
                     </div>
                   </div>
