update testimoni dan image

--- a/index.html
+++ b/index.html
@@ -551,6 +551,56 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjUdJnGkUchyGkxZ9Pd39BxTjA85ULkkrFLJGBfOE-AzZK1h4wPh=w90-h90-p-rp-mo-ba2-br100"
+                        class="testimonial-img" alt="testimoni-5" />
+                      <h3>Syukriah Mussaad</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        The mentor is a good listener, professional, knows what we need, what our shortcomings are, what the solutions are. The time and topics are very flexible and can be adjusted to what we need. Recommended 👍
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWe5ZBIlC0w-npBVg-cWbemErpYx7HG6MWshCu97o7tmbz6-dYv=w65-h65-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-6" />
+                      <h3>Muhammad Fadhil Rahman Ghozy</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                       Highly recommended for friends who want to learn public speaking from the beginning, here are taught things that are very necessary in public speaking. The mentors are also friendly and always give constructive suggestions and input. <span
+                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
+                        <span class="moreText">One class does not have many participants, so it is very suitable for me who is an introvert 🤭. I am very happy to be able to learn with Dialogika and fellow participants who also want to grow and develop from zero, continued success Dialogikaa ✨👍😁</span><span
+                          class="readLess"> &laquo; Read Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjV-Mzdwn6giDj01qHJxsmQzGEJ2geNwM0jViTLwsuxDyou4cXk=w72-h72-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-1" />
                       <h3>Hana Khairunisa</h3>
@@ -743,214 +793,7 @@
                 </div>
                 <!-- End testimonial item -->
 
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUdJnGkUchyGkxZ9Pd39BxTjA85ULkkrFLJGBfOE-AzZK1h4wPh=w90-h90-p-rp-mo-ba2-br100"
-                        class="testimonial-img" alt="testimoni-5" />
-                      <h3>Intan Annisa</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The classes held are quite good and the trainees are all experts. Taking this class is
-                        guaranteed to be fluent in public speaking, the important thing is to be serious and focused
-                        while taking the class ⭐⭐
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End testimonial item -->
-
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXVkTatlbhJDQFwCwgXDp0iT_leoI2tx0_LNfydThpcALFOZrH-gw=w75-h75-p-rp-mo-ba3-br100"
-                        class="testimonial-img" alt="testimoni-6" />
-                      <h3>Fahmi Rosdiana</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        It was very useful for me to practice speaking in a structured manner. With a mentor who is
-                        friendly, communicative and able to provide constructive input. <span
-                          class="dots">...</span><span class="readMore"> Read More&raquo;</span>
-                        <span class="moreText"> Now I am more confident in speaking in public</span><span
-                          class="readLess"> &laquo; Read Less</span>
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End testimonial item -->
-
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXbvphrft3QRHIMwVmLYAv26eE5VBEFAmIwm4gvQv8JBOOFfsNg=w75-h75-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-7" />
-                      <h3>Pujiyanti Widhiastuti</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        The classes are fun, you really increase your knowledge, the mentors are very patient and really
-                        care about their students. It's recommended.
-
-                        <span class="dots">...</span><span class="readMore"> Read More &raquo;</span>
-                        <span class="moreText"></span><span class="readLess"> &laquo; Read Less</span><i
-                          class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End testimonial item -->
-
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjXULNTNwBpCcFEN0c8tl7Efpl-aSRPiRYGlZeuVam6wmsKY4nB1=w45-h45-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-8" />
-                      <h3>Frizka Aprilia</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Impressions from taking the course: Very happy to be able to take this public speaking course,
-                        because I know more about what I need to improve. The tips given by the mentor during the course
-                        are also very practical, not only
-                        <span class="dots">...</span><span class="readMore"> Read More
-                          &raquo;</span>
-                        <span class="moreText">for presentations, but also for MCing, interviews, etc.
-                          Hopefully in the future my public speaking skills will get better and my hours of public
-                          speaking and interview skills will increase</span><span class="readLess"> &laquo; Read
-                          Less</span>
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End testimonial item -->
-
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUQ-Vq8rm5wwY5efzwiKmKbxyy-q6hh36u-mmH9mjtez315cJ7H=w75-h75-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-9" />
-                      <h3>Astrid Savitri</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Learning public speaking at Dialogika is very enjoyable, both in the learning atmosphere and the
-                        mentors. Here, you not only gain knowledge but <span class="dots">...</span><span
-                          class="readMore"> Read
-                          More
-                          &raquo;</span>
-                        <span class="moreText"> also the confidence to speak well in public.</span><span
-                          class="readLess"> &laquo; Read Less</span>
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End testimonial item -->
-
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjUcMakqN0FT5qg74Xn6cfDSYyOl6D5whj9gCcGv1zuFTlUNN7_b=w99-h99-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-10" />
-                      <h3>Kaori Azzahra</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Kursus berbicara di depan umum ini telah sepenuhnya
-                        mengubah keterampilan komunikasi saya. Dulunya saya
-                        takut berbicara di depan orang banyak, namun sekarang
-                        saya dengan percaya diri mengungkapkan
-                        <span class="dots">...</span><span class="readMore"> Read More &raquo;</span>
-                        <span class="moreText">
-                          ide-ide saya. Latihan praktis dan masukan yang
-                          membangun telah meningkatkan rasa percaya diri saya,
-                          menjadikan saya komunikator yang lebih
-                          efektif.</span><span class="readLess"> &laquo; Read Less</span><i
-                          class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End testimonial item -->
-
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjVy-ayvTXhbMbOQ6cIxh6DJcoBU5VoHVEU4d2rkw0lrXFB8RRFc=w75-h75-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-11" />
-                      <h3>berkah papua</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        First of all, I would like to say thank you very much to the very cooperative admin team and the
-                        teaching team, Mr. Dzaky, is very humble, stage
-                        <span class="dots">...</span><span class="readMore"> Read More
-                          &raquo;</span>
-                        <span class="moreText"> willing to share knowledge, tips, how to speak on so as not to be
-                          nervous and nervous. So for friends who want to learn public speaking, Dialogika class is the
-                          best place. Please contact the admin and register immediately. Continued
-                          success for the Dialogika team. Thank you</span><span class="readLess"> &laquo; Read
-                          Less</span>
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End testimonial item -->
+                
 
               </div>
               <div class="swiper-pagination"></div>
