update testi, image, dan icon

--- a/index.html
+++ b/index.html
@@ -551,6 +551,32 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWsE-w2Tj2ukpZUHFjXj8e62wXRwGPbxvaLRAY5WcfiZKTeW7M=w72-h72-p-rp-mo-ba5-br100"
+                        class="testimonial-img" alt="testimoni-11" />
+                      <h3>Satriyo Baskara</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                        It was very satisfying to learn public speaking here. The material presented was easy to understand and quite general, covering not only MCing but also voice-over (VO), self-confidence, personal branding, and more.
+                        <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText"> The material is also in module form, so you can read it again after all the sessions are over. The tutors are also fun and friendly, which is great.</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End testimonial item -->
+                <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
                         src="https://lh3.googleusercontent.com/a-/ALV-UjUdJnGkUchyGkxZ9Pd39BxTjA85ULkkrFLJGBfOE-AzZK1h4wPh=w90-h90-p-rp-mo-ba2-br100"
                         class="testimonial-img" alt="testimoni-5" />
                       <h3>Syukriah Mussaad</h3>
@@ -797,9 +823,9 @@
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
                       <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjWsE-w2Tj2ukpZUHFjXj8e62wXRwGPbxvaLRAY5WcfiZKTeW7M=w72-h72-p-rp-mo-ba5-br100"
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjU1HmboXJ5vwV0GRCaLzP3QrgBjb3d_zjlWbvCsZObWgkS7qks-CQ=w65-h65-p-rp-mo-br100"
                         class="testimonial-img" alt="testimoni-6" />
-                      <h3>Satriyo Baskara</h3>
+                      <h3>Rita Risnawati</h3>
                       <h4>
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i>
@@ -809,12 +835,9 @@
                       </h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Sangat memuaskan bisa belajar public speaking disini. Materi yg disampaikan mudah dipahami dan
-                        cukup general, tidak hanya tentang menjadi MC tapi juga ada materi voice over <span
+                        This activity is very good for those who want to develop their career and increase their confidence in public speaking, the mentor, Rafel, is good, <span
                           class="dots">...</span><span class="readMore"> Read More&raquo;</span>
-                        <span class="moreText">(VO), self confident, personal branding, dll. Materinya juga ada dalam
-                          bentuk modul ya temen² jadi bisa dibaca² lagi setelah selesai semua pertemuan. Kakak tentornya
-                          juga asik dan ramah, mantap lah</span><span class="readLess"> &laquo; Read Less</span>
+                        <span class="moreText">The material presented is also easy to understand and the response to the participants is also good, hopefully the mentor and team will always be successful....</span><span class="readLess"> &laquo; Read Less</span>
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -822,37 +845,7 @@
                 </div>
                 <!-- End testimonial item -->
 
-                <div class="swiper-slide">
-                  <div class="testimonial-wrap">
-                    <div class="testimonial-item">
-                      <img
-                        src="https://lh3.googleusercontent.com/a-/ALV-UjVy-ayvTXhbMbOQ6cIxh6DJcoBU5VoHVEU4d2rkw0lrXFB8RRFc=w75-h75-p-rp-mo-br100"
-                        class="testimonial-img" alt="testimoni-11" />
-                      <h3>berkah papua</h3>
-                      <h4>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                        <i class="bi bi-star-fill"></i>
-                      </h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        First of all, I would like to say thank you very much to the very cooperative admin team and the
-                        teaching team, Mr. Dzaky, is very humble, stage
-                        <span class="dots">...</span><span class="readMore"> Read More
-                          &raquo;</span>
-                        <span class="moreText"> willing to share knowledge, tips, how to speak on so as not to be
-                          nervous and nervous. So for friends who want to learn public speaking, Dialogika class is the
-                          best place. Please contact the admin and register immediately. Continued
-                          success for the Dialogika team. Thank you</span><span class="readLess"> &laquo; Read
-                          Less</span>
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- End testimonial item -->
+                
 
               </div>
               <div class="swiper-pagination"></div>
