--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
     </section>
     <!-- /Services Section -->
 
-    <!-- ======= Testimonials Section ======= -->
+   <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
       <div class="container">
         <div class="row">
@@ -547,6 +547,7 @@
           <div class="col-lg-9">
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
               <div class="swiper-wrapper">
+
                 <div class="swiper-slide">
                   <div class="testimonial-wrap">
                     <div class="testimonial-item">
@@ -596,6 +597,34 @@
                   </div>
                 </div>
                 <!-- End testimonial item -->
+                  <div class="swiper-slide">
+                  <div class="testimonial-wrap">
+                    <div class="testimonial-item">
+                      <img
+                        src="https://lh3.googleusercontent.com/a-/ALV-UjWjlvlSeZ8DJz0WOOoEHjUgv7kZua-lUOGgIVDVQab1OpqMaD_Pgw=w65-h65-p-rp-mo-br100"
+                        class="testimonial-img" alt="testimoni-3" />
+                      <h3>Aisyah Khairani Hanif Aqilla</h3>
+                      <h4>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                      </h4>
+                      <p>
+                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                    I really enjoyed taking public speaking lessons at Dialogika. The classrooms are comfortable with air conditioning, and the instructors are communicative. Of course, the children learned happily and had fun, plus they got to meet new, like-minded friends. Great job
+                        <span class="dots">...</span><span class="readMore"> Read More
+                          &raquo;</span>
+                        <span class="moreText"> Thank you, Ms. Niken, MBK Ais has become more confident and her public speaking has become more fluent 💐💐
+                        </span><span class="readLess"> &laquo; Read
+                          Less</span>
+                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                 <!-- End testimonial item -->
 
                 <div class="swiper-slide">
                   <div class="testimonial-wrap">
@@ -845,7 +874,7 @@
                 </div>
                 <!-- End testimonial item -->
 
-                
+
 
               </div>
               <div class="swiper-pagination"></div>
